# open-oak-game-of-life

./: Cargo.toml  README.md
objects/: glider.life
src/: main.rs
textures/: references.txt
